--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ ul {
     padding: 0;
     /*overflow: hidden;*/
     background-color: #333;
-    /*position: fixed;*/
+    position: fixed;
     top: 0;
     width: 100%;
     /*clear: both;*/
@@ -91,6 +91,16 @@ input[type=submit] {
     cursor: pointer;
 }
 
-/*form input.button {
-  background: #4b8df9;
-}*/
+
+/* Dropdown */
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #333;
+  width: auto;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
