--- a/css/style.less
+++ b/css/style.less
@@ -1,3 +1,20 @@
+@color-orange: #ff9900;
+@color-gray_light: #cccccc;
+@color-black_dark: #333333;
+@color-black_medium: #454545;
+@color-poder-blue: powderblue;
+
+body {
+    background: @color-black_dark;
+    color: @color-poder-blue;
+}
+a {
+    color:@color-orange;
+}
+h1, h2, h3, h4, h5, h6 {
+    color: @color-black_dark;
+}
+
 header,
 section,
 footer,
@@ -9,7 +26,7 @@ figure {
   display: block;
 }
 body {
-  background-color: powderblue;
+  // background-color: powderblue;
   margin: 0;
   padding: 0;
 }
