--- a/css/style.css
+++ b/css/style.css
@@ -1,140 +1,118 @@
-header, section, footer, aside, nav, main, article, figure {
-    display: block;
+body {
+  color: #333333;
+  background: powderblue;
+}
+a {
+  color: #ff9900;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: #333333;
+}
+header,
+section,
+footer,
+aside,
+nav,
+main,
+article,
+figure {
+  display: block;
 }
 body {
-    background-color: powderblue;
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
-
 ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    /*overflow: hidden;*/
-    background-color: #333;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    /*clear: both;*/
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  background-color: #333333;
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
-
 li {
-    /*float: left;*/
-    display: inline-block;
-    border-right: 1px solid #bbb;
+  display: inline-block;
+  border-right: 1px solid #bbb;
 }
-
 li:last-child {
-    border-right: none;
-    float: right;
+  border-right: none;
+  float: right;
 }
-
 li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 12px 10px;
-    text-decoration: none;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 12px 10px;
+  text-decoration: none;
 }
-
 /* Change the link color to #111 (black) on hover */
 li a:hover {
-    background-color: #111;
+  background-color: #111;
 }
-
 .active {
-    background-color: #4CAF50;
+  background-color: #4CAF50;
 }
-
 .container {
-  padding:20px;
-  margin-top:30px;
+  padding: 20px;
+  margin-top: 30px;
   text-align: center;
   column-span: all;
-  /*background-color:#1abc9c;*/
-  height:auto;
+  height: auto;
 }
-
 .form-field {
   background-color: #4CAF50;
   width: 50%;
   margin: auto;
 }
-
-/*form input {
-  width: 50%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-}*/
-
 form input {
   width: 50%;
   padding: 12px 20px;
   margin: 8px auto;
-  /*display: inline-block;*/
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
 }
-
 input[type=submit] {
-    width: 50%;
-    background-color: #333;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+  width: 50%;
+  background-color: #333;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
-
-
 /* Dropdown */
-
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #333;
+  background-color: #333333;
   width: auto;
 }
-
 .dropdown:hover .dropdown-content {
-    display: block;
+  display: block;
 }
-
-/*.flex-container {
-  display: flex;
-  justify-content: space-around;
-}*/
-
-
 .column-example {
   column-count: 3;
   column-gap: 30px;
   column-rule: solid 1px;
-  /*align-content: stretch;
-  align-items:flex-start;*/
   justify-content: center;
   align-items: center;
 }
-
 p {
   padding: 10px;
   margin: 0px;
 }
-
-
 @media screen and (max-width: 500px) and (min-width: 300PX) {
   .column-example {
     column-count: 2;
     column-gap: 30px;
     column-rule: solid 1px;
-    /*align-content: stretch;
-    align-items:flex-start;*/
     justify-content: center;
     align-items: center;
   }
